记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-04-CTFLearn.md
+++ b/docs/views/numerology/2024-12-04-CTFLearn.md
@@ -3,7 +3,7 @@ title: 20241204CTF学习笔记1
 date: 2024-12-04
 tags:
  - CTF
- - CTFLearning
+ - CTFLearn
 categories:
    - 命理学 Numerology
 isShowComments: true
@@ -27,4 +27,4 @@ publish: true
 
 <!-- more -->
 
-# 第0章：内容已丢失 请重新整理
+# 第1章：内容已丢失 请重新整理
