--- a/docs/views/numerology/2024-12-06-CTFLearn.md
+++ b/docs/views/numerology/2024-12-06-CTFLearn.md
@@ -3,7 +3,7 @@ title: 20241206CTF学习笔记3
 date: 2024-12-06
 tags:
  - CTF
- - CTFLearning
+ - CTFLearn
 categories:
    - 命理学 Numerology
 isShowComments: true
@@ -29,7 +29,7 @@ publish: true
 
 <!-- more -->
 
-# 第3章：web基础题-03-哈希(MD5)绕过
+# 第3章：web基础题-02-哈希(MD5)绕过
 
 哈希问题就是弱类型问题的延伸
 
@@ -63,7 +63,7 @@ Md5($a) === Md5($b)
 
 下面我们用数组的办法，让它符合条件，我们尝试生成一个md5值，先随便输入一个字符串
 
-![image-20241206211026790](/img/numerology/image-20241206211026790.png)
+![image-20241206211026790](/img/ctfLearn/image-20241206211026790.png)
 
 如果我们这时把这个md5函数的值给它一个数组，报的提示是我希望给我一个string，而不是一个数组，而且只是一个Warning警告，然后返回了一个NULL
 
