--- a/docs/views/numerology/2024-12-05-CTFLearn.md
+++ b/docs/views/numerology/2024-12-05-CTFLearn.md
@@ -3,7 +3,7 @@ title: 20241205CTF学习笔记2
 date: 2024-12-05
 tags:
  - CTF
- - CTFLearning
+ - CTFLearn
 categories:
    - 命理学 Numerology
 isShowComments: true
@@ -28,7 +28,7 @@ publish: true
 
 <!-- more -->
 
-# 第1章：web基础题-01-弱类型问题
+# 第2章：web基础题-01-弱类型问题
 
 #### 弱比较
 
