记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-13-CTFLearn.md
+++ b/docs/views/numerology/2024-12-13-CTFLearn.md
@@ -25,13 +25,171 @@ publish: true
 
 [[toc]]
 
-- 视频地址【[传送门](https://www.bilibili.com/video/BV1Lh411F7s8/)】
+- 视频地址【[🔗传送门](https://www.bilibili.com/video/BV1Lh411F7s8/)】
 
 <!-- more -->
 
-# 第11章：
+# 第11章：布尔盲注1
 
-## XXXX
+## 布尔盲注-回显不同
 
-今天请个假，出去吃饭回来晚了，明天补上这段内容
+### 布尔状态例如：
+
+1. 回显不同（比如能查到内容时显示内容，查不到时不显示内容、长度）
+2. HTTP响应状态码不同（200成功、500、301重定向）
+3. HTTP响应头变化（比如登录成功，可能会带location的请求头进行重定向，或者加上一个新的cookie，如果失败就没有以上这些）
+4. 基于错误的布尔注入（MySQL是否报错）
+
+我们从浏览器看到的各种内容的变化、响应头的变化、状态码的变化实际反映的是SQL语句查询的成功与否的布尔状态。
+
+
+
+### 初步认识盲注：
+
+```mysql
+# and 与运算 一假全假 这个语句的查询成功成功完全决定于and后边1=1和1=2
+select * from users where id='1' and 1=1
+select * from users where id='1' and 1=2
+
+# 同理我们可以换成别的条件 查首字母是不是a、b、c等
+select * from users where id ='1' and substr((select database()),1,1)='a'
+select * from users where id = '1' and substr((select database()),1,1)='c'
+```
+
+光有首字母还不够，我们可以修改substr的参数，比如
+
+```
+select * from users where id = '1' and substr((select database()),2,1)='a'
+```
+
+以此类推。。。
+
+认识盲注之后，我们可以仔细观察这个条件
+
+```
+substr((select database()),2,1)='a'
+```
+
+由此，我们可以引申出来盲注的两个基本点、两大基本问题：
+
+
+
+### 盲注的两大基础问题
+
+1. ✅**字符串的截取**
+2. ✅**比较**
+
+举个简单的例子，比如目标库名是ctfgame，我们截取以后再进行比较，总共7个字母，每个位置有62种字符，最差的情况也只需要7*62次就会得出结果。
+
+而如果我们不进行截取，直接对库名进行爆破，就远远不止7*62种可能，而是“62的七次方”个结果。
+
+
+
+### 字符串的截取
+
+1. **substr	(substring是另一种写法)**
+
+   在数据库中，最最最常用的是substr，而substr有两种参数写法，一种是`substr(str,pos)`这种方式只能从某一位开始截取，一直截取到最后，这个就不够灵活，而另一种参数方法是`substr(str,pos,len)`
+
+   - **`str`**：这是原始的字符串，它可以是一个列名（表示从表中的某一列获取字符串），也可以是一个字符串常量。例如，在查询语句`SELECT SUBSTR('abcdef', 3);`中，`'abcdef'`就是原始字符串`str`。
+   - **`pos`**：这个参数指定了开始提取子字符串的位置。需要注意的是，在 MySQL 中，字符串的位置索引是从 1 开始的，而不是 0。例如，在`SUBSTR('abcdef', 3)`中，`pos = 3`，表示从字符`c`开始提取，最终结果为`cdef`。
+   - `len`：这个参数指定了长度，比如`SUBSTR('abcdef', 3, 1)`中，`len=3`，表示从c开始截取，截取1位，最终结果
+   - 如果我们被过滤了逗号怎么办？我们可以用如下办法`SELECT SUBSTR('2024-12-14', 6, 5);`与`SELECT SUBSTR('2024-12-14' FROM 6 FOR 5)`
+   
+2. **mid()**
+
+   SQL MID()函数用于得到一个字符串的一部分，只有MySQL支持，不被 `SQL Server` 和 `Oracle`支持，而在`SQL Server`和 `Oracle`中可以用`SQL SUBSTRING`函数或者SQL `SUBSTR`函数作为替代。有substr首先substr，没有再用mid替代
+
+   mid和substr基本相同，不同点在于以下区别
+
+   - substr中参数是可选的，但mid必须是3个参数
+   - substr支持`SUBSTRING(str FROM pos FOR len)`或者`SUBSTRING(str FROM pos)`，举例如上一条
+   
+3. **right()**
+
+   从右边开始截取，如right('abcde',1)就是截取到一个e，此时就不是精确的截取某一位的东西了，但我们还可以利用这个函数达到我们的目的。我们用以下步骤实现
+
+   1. `right('abcdef',1)='a'`、`right('abcdef',1)='b'`、`right('abcdef',1)='c'`依次类推，直到找到`f`
+   2. 然后我们截两位`right('abcdef',2)='af'`、`right('abcdef',2)='bf'`、`right('abcdef',2)='cf'`依次类推，最终找到是`ef`
+   3. 接下来递归往前推，每次多截1位，带着之前已经截取好并比较通过过的内容去继续比较
+
+> 其实我们不推荐用直接比较字符的方法，因为如果目标的flag中有特殊字符单引号`'`，在使用这个方法的时候，就会产生如下语句，单引号导致了出现了语法错误。
+>
+> ```
+> right(select flag from flag,3) = ''def'
+> ```
+
+
+
+### 不是比较字符的解决方案---Ascii码
+
+ascii码在使用时，一定要注意的一点是：97对应的a是首字符，ascii函数会返回首字符的ascii码值
+
+```mysql
+mysql> select ascii('abc');
++--------------+
+| ascii('abc') |
++--------------+
+|           97 |
++--------------+
+1 row in set (0.00 sec)
+```
+
+接下来我们看如下情况：
+
+```mysql
+mysql> select right('abcdef',1);
++-------------------+
+| right('abcdef',1) |
++-------------------+
+| f                 |
++-------------------+
+1 row in set (0.00 sec)
+
+mysql> select right('abcdef',2);
++-------------------+
+| right('abcdef',2) |
++-------------------+
+| ef                |
++-------------------+
+1 row in set (0.00 sec)
+
+mysql> select right('abcdef',3);
++-------------------+
+| right('abcdef',3) |
++-------------------+
+| def               |
++-------------------+
+1 row in set (0.00 sec)
+```
+
+由刚才的查询结果可以得知，我们的首字母是一直在变的，我们将他套进ascii函数里去，得到如下结果：
+
+```mysql
+mysql> select ascii(right('abcdef',1));
++--------------------------+
+| ascii(right('abcdef',1)) |
++--------------------------+
+|                      102 |
++--------------------------+
+1 row in set (0.00 sec)
+
+mysql> select ascii(right('abcdef',2));
++--------------------------+
+| ascii(right('abcdef',2)) |
++--------------------------+
+|                      101 |
++--------------------------+
+1 row in set (0.00 sec)
+
+mysql> select ascii(right('abcdef',3));
++--------------------------+
+| ascii(right('abcdef',3)) |
++--------------------------+
+|                      100 |
++--------------------------+
+1 row in set (0.00 sec)
+```
+
+1. 
 
