记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-21-CTFLearn.md
+++ b/docs/views/numerology/2024-12-21-CTFLearn.md
@@ -43,4 +43,14 @@ publish: true
 
 # 第19章：Web应用&架构搭建&站库分离&路由访问&配置受限&DNS解析
 
-回家了，有点犯懒不想学，明天回去补上。
+## 常规的Web应用搭建：
+
+1. 购买云服务器、购买域名
+
+2. 云服务器搭建中间件
+
+   比如windows搭建iis服务器，可以网上查看相关教程，这里不做过多演示[传送门](https://blog.csdn.net/yuanguozhengjust/article/details/25747729)
+
+3. 下载并上传Web程序源码
+
+4. 添加网站并绑定域名
