记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-21-CTFLearn.md
+++ b/docs/views/numerology/2024-12-21-CTFLearn.md
@@ -54,3 +54,85 @@ publish: true
 3. 下载并上传Web程序源码
 
 4. 添加网站并绑定域名
+
+   我们在阿里云购买域名是根域名`xiaosedi.fun`，可以往上添加子域名，需要在网站上解析设置
+
+   ![image-20241223191722675](/img/ctfLearn/image-20241223191722675.png)
+
+   
+
+   这个步骤就是在添加子域名，我们添加了两条子域名后可以通过以下方式访问：
+
+   ```
+   www.xiaosedi.com
+   xiaodi.xiaosedi.com
+   ```
+
+   
+
+   这里我们看到我们添加了`www`和`xiaodi`，如果我们添加的是`@`，这意思是前面随机，什么都可以。
+
+   在小迪的视频教程中使用的是Windows Server操作系统，在IIS管理器中添加网站，需要加上主机名也就是刚才的地址`www.xiaosedi.com`。
+
+   ps：感觉这个步骤是双向奔赴，网站里需要加上服务器的ip，服务器的IIS管理器中要加上主机名
+
+   
+
+   此时我们发现访问`xiaodi.xiaosedi.com`这个地址的时候，出现的是Windows Server的默认页面
+
+   **原因：**看刚才一开始的图片，我们在阿里云的域名解析设置里，写的是`xiaodi`和`www`，这里如果我们只在网站设置了，没在服务器设置的话，就会访问这个ip地址`8.218.70.35`，ip访问的话会显示默认页面
+
+   **解决方案：**我们在服务器上只设置了`www.xiaosedi.com`这个地址，需要在iis管理器里，右键我们的网站，再绑定一个网站`xiaodi.xiaosedi.com`绑定才行。
+
+   
+
+   做了这个实验，我们需要明白子域名的意思，比如`baidu.com`就有`fanyi.baidu.com`或者`tieba.baidu.com`等
+
+   > 1. 子域名的定义
+   >    - 子域名是主域名的一个细分部分，位于主域名之前，通过一个点（.）来分隔。以`baidu.com`为例，`fanyi.baidu.com`和`tieba.baidu.com`都是`baidu.com`的子域名。主域名是一个网站的主要标识，而子域名则可以用于划分网站的不同功能区域或者服务。
+   > 2. 用途和好处
+   >    - **功能划分**：子域名可以有效地将网站的不同功能区分开来。比如百度的翻译服务（`fanyi.baidu.com`）和百度贴吧（`tieba.baidu.com`）是两个不同的功能模块。通过使用子域名，可以让用户更直观地了解该部分内容的主题，同时也方便网站开发者对不同功能进行独立的管理和维护，包括服务器配置、代码部署和安全策略等。
+   >    - **资源隔离**：从技术角度讲，子域名可以帮助实现资源隔离。例如在服务器资源分配上，不同的子域名可以对应不同的服务器或者服务器集群，这样可以根据每个子域名对应的功能或服务的流量、负载等情况，灵活地配置服务器资源，避免一个功能模块的高负载影响到其他模块。在安全方面，也可以针对不同的子域名设置不同的安全策略，如防火墙规则、访问控制等。
+   >    - **品牌拓展和合作**：子域名还可以用于品牌拓展或者合作项目。例如，一个公司推出新的产品线或者和其他品牌合作推出联名产品，可以使用新的子域名来推广，这样既能够借助主品牌的知名度，又能够突出新产品或者合作项目的独立性。
+   > 3. 技术实现
+   >    - **域名系统（DNS）配置**：在技术层面，子域名的实现依赖于域名系统（DNS）。当用户在浏览器中输入子域名（如`fanyi.baidu.com`）时，浏览器会向 DNS 服务器发送查询请求。DNS 服务器会根据预先配置的记录来解析这个子域名，找到对应的 IP 地址。这个配置过程通常是由域名所有者（如百度公司）通过域名注册商提供的管理界面或者专业的 DNS 服务来完成。配置记录类型主要包括 A 记录（将域名指向一个 IP 地址）、CNAME 记录（将域名指向另一个域名）等。
+   >    - **服务器设置**：在找到子域名对应的 IP 地址后，用户的请求会被发送到对应的服务器。服务器需要根据子域名来识别请求，并返回相应的内容。这通常需要在服务器软件（如 Apache 或 Nginx）中进行配置，设置虚拟主机（Virtual Host）来区分不同子域名的请求，并提供相应的网页或服务内容。例如，对于`fanyi.baidu.com`的请求，服务器会识别并返回与翻译相关的网页和服务。
+
+
+
+### 子域名模式
+
+```
+www.xiaodi8.com zblog asp程序
+xiaodi.xiaodi8.com wordpress php程序
+bbs.xioadi8.com 论坛 dz程序
+oa.xiaodi8.com OA 通达OA
+```
+
+试想一下，我们在信息搜集的时候，这两个域名是在同一个域名解析下的，任何一个子域名有安全漏洞，都与这个网站整体相关。
+
+
+
+### 端口模式
+
+网站默认的端口是80，可加可不加。
+
+```
+www.xiaodi8.com zblog asp程序
+www.xiaodi8.com:8080 wordpress php程序
+```
+
+这意味着我们访问不同的端口，访问到的程序不是同一个，这就是我们后边信息搜集为什么要学习端口扫描。
+
+我们看网站不是看他域名是不是相同，在我们的例子中端口不一样，这就意味着是两个目标，我们做渗透测试针对的是程序，所以我们有两个攻击点。
+
+
+
+### 目录模式
+
+```
+www.xiaodi8.com zblog asp程序
+www.xiaodi8.com/bbs 论坛 dz论坛
+```
+
+这又是两套程序，我们把一套源码嵌套到另一套源码里，这其实是两套程序，我们就有了两个目标，任何一套程序出了安全漏洞都会影响到整体安全。
