记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-22-CTFLearn.md
+++ b/docs/views/numerology/2024-12-22-CTFLearn.md
@@ -4,7 +4,6 @@ date: 2024-12-22
 tags:
  - CTF
  - CTFLearn
- - Misc
 categories:
    - 命理学 Numerology
 isShowComments: true
@@ -56,6 +55,44 @@ publish: true
 
 
 
-### 网站应用场景
+### 网站应用场景造成源码分类
 
-我的评价是，天天补裤裆，写不完了，怎么还差一天的，服了。
+**开源：**就是网站可以下载到本地，用了开源协议的共享式网站
+
+**闭源（商业）：**需要购买的，公司的产品
+
+**自写：**比如自己的博客
+
+大型企业基本不会用开源的代码，安全性太低。或者商业的代码，不需要找别人开发。
+
+> 以下是一些常用的开源协议： 
+>
+> - ### GPL 协议
+>
+>   - **简介**：由自由软件基金会制定，旨在保证软件的开源性和用户的自由。有 GPL2.0 和 GPL3.0 等版本，GPL3.0 在用户专利保护和 DRM 限制等方面有所更新.
+>   - **特点**：使用该协议的软件，其源代码及衍生作品都必须开源，并以相同协议发布。允许用户自由运行、复制、修改和分发软件，但不允许将开源软件私有化用于商业发售.
+>
+>   ### LGPL 协议
+>
+>   - **简介**：是 GPL 的变种，主要用于类库，被商业软件开发商广泛支持.
+>   - **特点**：允许商业软件通过类库引用方式使用 LGPL 类库而无需开源商业软件代码，但如果修改了 LGPL 协议的代码，修改后的代码仍需开源.
+>
+>   ### BSD 协议
+>
+>   - **简介**：分为 BSD 2-Clause 和 BSD 3-Clause 两种，给予使用者很大自由.
+>   - **特点**：使用者可自由使用、修改和再发布代码，无论是开源还是专有软件均可。发布时，若包含源代码需带原 BSD 协议，若仅发布二进制类库 / 软件，则需在文档和版权声明中包含原协议，且不可用作者 / 机构名字和原产品名做市场推广.
+>
+>   ### Apache 协议
+>
+>   - **简介**：著名的非盈利开源组织 Apache 采用的协议，和 BSD 类似，对商业应用友好.
+>   - **特点**：允许使用者修改和再发布代码作为开源或商业产品，使用时需给用户一份协议，修改代码要在被修改文件中说明，延伸代码中需带有原协议等声明，若发布产品包含 Notice 文件，其中也要带有该协议.
+>
+>   ### MPL 协议
+>
+>   - **简介**：最初由 Netscape 的 Mozilla 小组设计，平衡了开发者对源代码的需求和利益.
+>   - **特点**：要求对经 MPL 许可证发布的源代码的修改以 MPL 许可证方式再许可，但允许企业在已有源代码库上加接口，接口程序源代码以 MPL 许可证对外许可，库中其他源代码则无需强制对外许可.
+>
+>   ### MIT 协议
+>
+>   - **简介**：是一种非常宽松的许可协议，作者仅保留版权.
+>   - **特点**：允许任何人进行个人或商业使用、复制、分发和修改，唯一要求是在发行版中包含原许可协议声明
