记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-22-CTFLearn.md
+++ b/docs/views/numerology/2024-12-22-CTFLearn.md
@@ -57,11 +57,14 @@ publish: true
 
 ### 网站应用场景造成源码分类
 
-**开源：**就是网站可以下载到本地，用了开源协议的共享式网站
+- **开源：**就是网站可以下载到本地，用了开源协议的共享式网站
+  1. 开源且源码可见
+  2. 开源但源码不可见-加密：比如`PHP代码加密`、`ASP代码加密`，加密后不会影响本身执行。
+  3. 开源但源码不可见-语言特性决定：像Java在编译后是class文件
+- **闭源（商业）：**需要购买的，公司的产品
+- **自写：**比如自己的博客
 
-**闭源（商业）：**需要购买的，公司的产品
-
-**自写：**比如自己的博客
+有些源码可下载，但看不到是什么东西，如果能看到代码就是白盒测试、也就是代码审计，而碰到了加密或者是语言特性决定源码不可见的情况，就比如.Net的代码就要进行反编译。
 
 大型企业基本不会用开源的代码，安全性太低。或者商业的代码，不需要找别人开发。
 
