记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-26-CTFLearn.md
+++ b/docs/views/numerology/2024-12-26-CTFLearn.md
@@ -65,7 +65,7 @@ publish: true
 >
 > 影响：数据被单独存放，能连接才可影响数据
 
-### 前后端分离
+## 前后端分离
 
 **原理：**前端JS框架，API传输数据
 
@@ -95,7 +95,7 @@ publish: true
 
 
 
-### 软件式搭建网站/集成化环境
+## 软件式搭建网站/集成化环境
 
 **宝塔+phpstudy**
 
