--- a/docs/views/numerology/2024-12-29-CTFLearn.md
+++ b/docs/views/numerology/2024-12-29-CTFLearn.md
@@ -1,6 +1,6 @@
 ---
-title: 2024127CTF学习笔记24
-date: 2024-12-27
+title: 2024129CTF学习笔记25
+date: 2024-12-29
 tags:
  - CTF
  - CTFLearn
@@ -30,11 +30,12 @@ publish: true
 
 
 
+
 ---
 
 <Boxx/>
 
-从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第39天
+从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第41天
 
 发现单纯学习CTF没有一个系统完整的课程，所以准备学小迪安全的渗透测试课程，希望能打一个好基础。
 
@@ -46,8 +47,13 @@ publish: true
 
 <!-- more -->
 
-# 第20章：Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
+# 第21章：Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
 
-## 网站架构：
+## Docker容器建站
 
-今日请假，出去吃饭
+**原理：**虚拟化技术，将网站、搭建环境封装成镜像，用docker技术拉取、还原。
+
+**官网：**【[链接](https://hub.docker.com/)】
+
+**对安全测试的影响：**
+
