记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-29-CTFLearn.md
+++ b/docs/views/numerology/2024-12-29-CTFLearn.md
@@ -47,6 +47,8 @@ publish: true
 
 <!-- more -->
 
+
+
 # 第21章：Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
 
 ## Docker容器建站
@@ -55,5 +57,51 @@ publish: true
 
 **官网：**【[链接](https://hub.docker.com/)】
 
-**对安全测试的影响：**
+**重点：**需要明白的是，我们只是复现了环境，从安全的角度去考虑漏洞，不是系统的学习这些技术
 
+**建站步骤：**
+
+1. 安装Docker，教程可以看【[w3cschool的Docker安装教程](https://www.w3cschool.cn/docker/)】
+
+2. 拉取镜像
+
+   ```shell
+   # 拉取镜像
+   docker pull vulhub/tomcat:8.0
+   
+   # 列出本地所有镜像
+   docker images
+   docker image ls
+   
+   # 上条命令的回显内容
+   
+   REPOSITORY    TAG                IMAGE ID       CREATED         SIZE
+   tomcat        latest             fb5657adc892   19 months ago   680MB
+   hello-world   latest             feb5d9fea6a5   22 months ago   13.3kB
+   redis         5.0.9-alpine3.11   3661c84ee9d0   3 years ago     29.8MB
+    
+   REPOSITORY   # 镜像的仓库源
+   TAG          # 镜像的标签
+   IMAGE ID     # 镜像的id
+   CREATED      # 镜像的创建时间
+   SIZE         # 镜像的大小
+   
+   # 启动 端口是8080，是用自己的8080映射出对外的8080
+   docker run -it -d -p 8080:8080 vulhub/tomcat
+   
+   # 启动之后可以在外部浏览器访问该ip地址的8080端口，比如视频中的
+   http://47.94.236.117:8080
+   
+   # 可以结束运行
+   docker stop vulhub/tomcat
+   
+   # 可以进入容器
+   cd vulhub/tomcat/tomcat8/
+   docker-compose up -d
+   ```
+
+**渗透测试：**
+
+1. 用狐狸的工具箱生成java后门，用的应该是jsp后门，将后门上传到服务器
+2. 通过WebShell工具可以连接后门，发现权限是root，目录、文件权限都能看到
+3. 事实上，这里展示的目录是虚拟的，并不是服务器的权限。通过docker逃逸技术可以获取真正的服务器权限
