--- a/docs/views/numerology/2025-01-02-CTFLearn.md
+++ b/docs/views/numerology/2025-01-02-CTFLearn.md
@@ -39,6 +39,38 @@ publish: true
 
 <!-- more -->
 
-# 第22章：
+# 第22章：Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
-## 日复一日，好烦
+## CDN
+
+**现象：**外地访问，尤其是海外访问的时候，会出现访问太慢的情况，为了解决这个问题所以产生了CDN
+
+**原理：**内容分发服务，旨在提高网站访问速度，在CDN选择区域内分布多个节点，提高访问速度。比如选择全球，会在全球分布各种节点，如果我们开通一个CDN，真实地址是在湖北，如果在北京访问，会访问CDN北京节点。
+
+**举例：**就像百度等大厂会有CDN技术的应用，在全国乃至全球访问百度都不会有太大的速度差异。
+
+![img](/img/ctfLearn/Cb66wtb4t4f34w_ea0bb433fdc142f3bbfb6bc163cf285d.png)
+
+**影响：**隐藏了真实的IP地址，导致目标测试错误
+
+**演示：**Windows2012+BT宝塔面板+CDN服务
+
+1. 申请并备案域名以后，进入CDN的页面，业务类型一般是选择`“全站加速”`，其他的有音频、视频、图片加速等
+2. 加速区域选择`“仅中国内地”、“全球”、“全球（不包含中国内地）”`
+3. 配置宝塔的域名绑定 `47.122.22.195 -> www.zoro8.com`，此时ping这个域名是不通的，因为没有做阿里云网站DNS配置上的域名绑定解析，需要加个www的主机记录
+4. 然后在CDN的页面里，将刚才的 IP地址、端口加上，点下一步开通CDN
+5. 然后需要等待几分钟的时间让他配置完成
+6. 需要配置CNAME，将生成的`www.zoro8.com.w.kunlunpi.com`加到DNS解析里，主机名还是www
+7. 上一步完成后会检测CNAME状态，生效后会显示“已配置”
+
+![image-20250103211044525](/img/ctfLearn/image-20250103211044525.png)
+
+完成以上配置步骤后，我们再去ping这个域名`www.zoro8.com`，因为DNS解析时间不同的问题，视频演示中出现了没效果的情况。
+
+我们针对这种情况，可以使用【超级[ping在线工具](https://ping.chinaz.com/)】完成超级ping，就是用全国多个区域去ping这个地址
+
+![image-20250103211726936](/img/ctfLearn/image-20250103211726936.png)
+
+图中我们用这个工具试了一下ping百度，用到多个ip去ping这个地址，这里的响应ip各不相同，这就意思是用到了CDN加速，规则是就近规则。同样的，我们是用了一个ip地址来控制那个网站，但分配到了多个ip
+
+**结论：**我们在信息搜集的时候，针对域名进行搜集，如果有CDN加速的话，如果只搜集到其中某个ip，对这个ip进行渗透测试，就是测试错了地方，真实的网站根本不在那个ip上面，它只是一个节点。后面会有绕过CDN的课程，针对性的做信息搜集
