记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-31-CTFLearn.md
+++ b/docs/views/numerology/2024-12-31-CTFLearn.md
@@ -27,6 +27,8 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第43天
 
+Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
+
 发现单纯学习CTF没有一个系统完整的课程，所以准备学小迪安全的渗透测试课程，希望能打一个好基础。
 
 此外，还应该多参加各种CTF比赛，或者是每天练习CTF赛题，理论与实践相结合。
@@ -58,7 +60,16 @@ bilibili的2025跨晚挺好看的
 
 **影响：**无漏洞
 
+
+
 ## 伪静态Web
 
-**原理：**视频中演示用Z-blog创建文章，应该是可以将这个文章生成一个html，在浏览器访问html页面。在应用中心有`“强制伪静态跳转”`来伪装。
+### **原理：**
 
+视频中演示用Z-blog创建文章，应该是可以将这个文章生成一个html，在浏览器访问html页面。在应用中心有`“强制伪静态跳转”`来伪装。
+
+
+
+## 思维导图
+
+![image-20250105214211668](/img/ctfLearn/image-20250105214211668.png)
