--- a/docs/views/numerology/2025-01-04-CTFLearn.md
+++ b/docs/views/numerology/2025-01-04-CTFLearn.md
@@ -31,6 +31,8 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第47天
 
+Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
+
 发现单纯学习CTF没有一个系统完整的课程，所以准备学小迪安全的渗透测试课程，希望能打一个好基础。
 
 此外，还应该多参加各种CTF比赛，或者是每天练习CTF赛题，理论与实践相结合。
@@ -166,4 +168,3 @@ Windows2012+BT宝塔面板+Nginx
 >
 > 是一种网络地址转换技术，通过在路由器或防火墙上设置映射规则，将公网 IP 的特定端口映射到内网的指定设备和端口上，主要用于服务发布、游戏联机等场景5。
 
-## 负载均衡
