--- a/docs/views/numerology/2024-12-21-CTFLearn.md
+++ b/docs/views/numerology/2024-12-21-CTFLearn.md
@@ -30,6 +30,8 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第33天
 
+Web应用&架构搭建&站库分离&路由访问&配置受限&DNS解析
+
 发现单纯学习CTF没有一个系统完整的课程，所以准备学小迪安全的渗透测试课程，希望能打一个好基础。
 
 此外，还应该多参加各种CTF比赛，或者是每天练习CTF赛题，理论与实践相结合。
