--- a/docs/views/numerology/2024-12-28-CTFLearn.md
+++ b/docs/views/numerology/2024-12-28-CTFLearn.md
@@ -36,6 +36,8 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第40天
 
+Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
+
 发现单纯学习CTF没有一个系统完整的课程，所以准备学小迪安全的渗透测试课程，希望能打一个好基础。
 
 此外，还应该多参加各种CTF比赛，或者是每天练习CTF赛题，理论与实践相结合。
