--- a/docs/views/numerology/2025-01-02-CTFLearn.md
+++ b/docs/views/numerology/2025-01-02-CTFLearn.md
@@ -29,6 +29,8 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第45天
 
+Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
+
 发现单纯学习CTF没有一个系统完整的课程，所以准备学小迪安全的渗透测试课程，希望能打一个好基础。
 
 此外，还应该多参加各种CTF比赛，或者是每天练习CTF赛题，理论与实践相结合。
@@ -49,7 +51,7 @@ publish: true
 
 **举例：**就像百度等大厂会有CDN技术的应用，在全国乃至全球访问百度都不会有太大的速度差异。
 
-![img](/img/ctfLearn/Cb66wtb4t4f34w_ea0bb433fdc142f3bbfb6bc163cf285d.png)
+![image-20250105201826936](/img/ctfLearn/image-20250105201826936.png)
 
 **影响：**隐藏了真实的IP地址，导致目标测试错误
 
