记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-06-CTFLearn.md
+++ b/docs/views/numerology/2025-01-06-CTFLearn.md
@@ -67,5 +67,7 @@ Windows Server2012 + 宝塔 + ShopXO开源商城 +  一门APP
 
 - 需要记得在阿里云的DNS域名解析中加一条域名解析记录
 - 用宝塔面板的一件部署，安装`ShopXO开源商城`
-- 视频演示用用到了【[一门APP](https://sapp.yimenapp.com/)】进行网站的打包，可以在里边做相应设置，比如应用图标等
+- 视频演示用用到了【[一门APP](https://sapp.yimenapp.com/)】或者【[变色龙](https://www.appbsl.cn/index)】进行网站的打包，可以在里边做相应设置，比如应用图标等
+- App的核心还是网站，在安全测试方面和普通网站没有区别
+- 视频中演示了两个项目的App打包，一个是【[ShopXO开源商城](https://shopxo.net/)】，另一个是【[小迪渗透吧](http://xiaodi8.com/)】，而商城做了手机端的适配，而博客没做
 
