记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-07-CTFLearn.md
+++ b/docs/views/numerology/2025-01-07-CTFLearn.md
@@ -42,7 +42,7 @@ publish: true
 
 <!-- more -->
 
-# 第22章：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
+# 第23章：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
 
 ## 原生开发
 
@@ -63,7 +63,8 @@ publish: true
 
 ### 渗透思路：
 
-利用安卓逆向技术进行反编译，利用安全测试技术进行抓包，从反编译和抓包提取App的资产信息，找到有哪些接口、资产信息等。至于后面的安全测试是属于网站的、接口的、单个IP的，根据App的特性决定。
+- 利用安卓逆向技术进行反编译，利用安全测试技术进行抓包，从反编译和抓包提取App的资产信息，找到有哪些接口、资产信息等。至于后面的安全测试是属于网站的、接口的、单个IP的，根据App的特性决定。
+- 从逆向的角度分析代码逻辑、设计问题
 
 
 
@@ -108,3 +109,9 @@ Hbuilder X + [uni-app框架演示示例](https://github.com/dcloudio/hello-uniap
 **演示：**【[ShopXO开源商城](https://shopxo.net/)】 +  【[一门APP](https://sapp.yimenapp.com/)】
 
 **安全影响：**属于常规Web安全测试（php那种）
+
+
+
+## 思维导图
+
+![image-20250108193447410](/img/ctfLearn/image-20250108193447410.png)
