--- a/docs/views/numerology/2025-01-06-CTFLearn.md
+++ b/docs/views/numerology/2025-01-06-CTFLearn.md
@@ -41,7 +41,7 @@ publish: true
 
 <!-- more -->
 
-# 第22章：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
+# 第23章：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
 
 ## 原生开发
 
@@ -55,7 +55,7 @@ publish: true
 
 ## 使用flutter开发
 
-flutter是近年来谷歌退出的一款UI框架，使用dart语言进行开发，支持跨平台，weight渲染直接操作硬件层，体验可媲美原生，但是flutter技术比较新，生态还不完善，开发效率偏低。
+flutter是近年来谷歌推出的一款UI框架，使用dart语言进行开发，支持跨平台，weight渲染直接操作硬件层，体验可媲美原生，但是flutter技术比较新，生态还不完善，开发效率偏低。
 
 ## 常规Web开发
 
