记录本体项目代码修改部分

--- a/docs/views/numerology/2024-12-21-CTFLearn.md
+++ b/docs/views/numerology/2024-12-21-CTFLearn.md
@@ -42,7 +42,7 @@ Web应用&架构搭建&站库分离&路由访问&配置受限&DNS解析
 
 <!-- more -->
 
-# 第19章：Web应用&架构搭建&站库分离&路由访问&配置受限&DNS解析
+# 第19章：基础入门-Web应用&架构搭建&站库分离&路由访问&配置受限&DNS解析
 
 ## 常规的Web应用搭建：
 
