--- a/docs/views/numerology/2024-12-28-CTFLearn.md
+++ b/docs/views/numerology/2024-12-28-CTFLearn.md
@@ -48,7 +48,7 @@ Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
 
 <!-- more -->
 
-# 第20章：Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
+# 第20章：基础入门-Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
 
 ## 模拟攻击集成软件站：
 
