--- a/docs/views/numerology/2025-01-05-CTFLearn.md
+++ b/docs/views/numerology/2025-01-05-CTFLearn.md
@@ -32,7 +32,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第48天
 
-今日内容：Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
+今日内容：基础入门-Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
 [[toc]]
 
@@ -40,7 +40,7 @@ publish: true
 
 <!-- more -->
 
-# 第22章：Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
+# 第22章：基础入门-Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
 ## 负载均衡
 
