--- a/docs/views/numerology/2025-01-08-CTFlearn.md
+++ b/docs/views/numerology/2025-01-08-CTFlearn.md
@@ -35,7 +35,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第51天
 
-今日内容：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
+今日内容：基础入门-APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
 
 [[toc]]
 
@@ -43,7 +43,7 @@ publish: true
 
 <!-- more -->
 
-# 第23章：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
+# 第23章：基础入门-APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
 
 ## 抓包
 
