--- a/docs/views/numerology/2024-12-26-CTFLearn.md
+++ b/docs/views/numerology/2024-12-26-CTFLearn.md
@@ -47,7 +47,7 @@ Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
 
 <!-- more -->
 
-# 第20章：Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
+# 第20章：基础入门-Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
 
 ## 网站架构：
 
