--- a/docs/views/numerology/2024-12-31-CTFLearn.md
+++ b/docs/views/numerology/2024-12-31-CTFLearn.md
@@ -39,7 +39,7 @@ Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
 <!-- more -->
 
-# 第21章：Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
+# 第21章：基础入门-Web架构&前后端分离站&Docker容器站&集成软件站&建站分配
 
 ## 今天跨年！祝大家新年快乐！万事如意！
 
