--- a/docs/views/numerology/2025-01-01-CTFLearn.md
+++ b/docs/views/numerology/2025-01-01-CTFLearn.md
@@ -38,7 +38,7 @@ publish: true
 
 <!-- more -->
 
-# 第22章：Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
+# 第22章：基础入门-Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
 ## 工具推荐：
 
