--- a/docs/views/numerology/2025-01-02-CTFLearn.md
+++ b/docs/views/numerology/2025-01-02-CTFLearn.md
@@ -41,7 +41,7 @@ Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
 <!-- more -->
 
-# 第22章：Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
+# 第22章：基础入门-Web架构&OSS存储&负载均衡&CDN加速&反向代理&WAF防护
 
 ## CDN
 
