--- a/docs/views/numerology/2025-01-06-CTFLearn.md
+++ b/docs/views/numerology/2025-01-06-CTFLearn.md
@@ -33,7 +33,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第49天
 
-今日内容：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
+今日内容：基础入门-APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
 
 [[toc]]
 
@@ -41,7 +41,7 @@ publish: true
 
 <!-- more -->
 
-# 第23章：APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
+# 第23章：基础入门-APP架构&小程序&H5+Vue语言&Web封装&原生开发&Flutter
 
 ## 原生开发
 
