记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-11-CTFLearn.md
+++ b/docs/views/numerology/2025-01-11-CTFLearn.md
@@ -49,7 +49,7 @@ publish: true
 
 ![image-20250111184214345](/img/ctfLearn/image-20250111184214345.png)
 
-### 防火墙绕过&正向连接&反向连接&内网服务器演示
+### 实际案例1：防火墙绕过&正向连接&反向连接&内网服务器演示
 
 > 我的Wmware的Win10虚拟机在机械硬盘上，是真的慢，这就不是机械硬盘的正确用法，应该是用来做NAS才最好。
 
