记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-15-CTFLearn.md
+++ b/docs/views/numerology/2025-01-15-CTFLearn.md
@@ -65,6 +65,9 @@ publish: true
 
    是一个HTTP协议调试代理工具，他能够记录并检查所有你电脑恶化互联网之间的HTTP通讯，设置断点，查看所有的“进出”Fiddler的数据（指cookie，html，js，css等文件）。Fiddler要比其他的网络调试器要更加简单，因为它不仅仅暴露HTTP通讯，还提供了一个用户友好的格式。**使用时需要关掉浏览器的代理插件**
 
+   - 汉化时将 FdToChinese.dll 放到 Fiddle//Scripts//目录下
+   - 汉化时将 FiddlerTexts.txt 放到 Fiddle//安装的目录下
+
 2. **Charles：**与其他工具比优势不明显，了解即可
 
    是 PC 端常用的网络封包截取工具, 也可以抓取移动端的网络请求。除了调试接口外，Charles 也可以用于分析第三方应用的请求。配合 Charles 的 SSL 功能，Charles 还可以分析 Https 协议。**使用时需要关掉浏览器的代理插件**
@@ -72,4 +75,6 @@ publish: true
 3. **BurpSuite：**==核心抓包工具==
 
    是用于攻击web 应用程序的集成平台，包含了许多工具。Burp Suite为这些工具设计了许多接口，以加快攻击应用程序的过程。所有工具都共享一个请求，并能处理对应的HTTP 消息、持久性、认证、代理、日志、警报。
+   
+   
 
