记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-16-CTFLearn.md
+++ b/docs/views/numerology/2025-01-16-CTFLearn.md
@@ -94,6 +94,11 @@ publish: true
 
 ### **配置步骤：**
 
-1. 在Fiddler工具中，需要在`工具-选项-HTTPS`页面中，选择`From remote dients only`
+1. 在Fiddler工具中，需要在`工具-选项-HTTPS`页面中，选择`From remote dients only`，即“从远程客户端”
 
-![image-20250116224308133](/img/ctfLearn/image-20250116224308133.png)
+   ![image-20250116224308133](/img/ctfLearn/image-20250116224308133.png)
+
+2. 
+
+
+
