--- a/docs/views/numerology/2025-01-15-CTFLearn.md
+++ b/docs/views/numerology/2025-01-15-CTFLearn.md
@@ -49,8 +49,8 @@ publish: true
 
 ### 准备工作：
 
-1. 浏览器安装证书：解决本地抓HTTPS
-2. 模拟器安装证书，解决模拟器抓HTTPS
+1. 浏览器安装证书：解决本地抓HTTPS【[教程](https://blog.csdn.net/youshijifen/article/details/134511036)】
+2. 模拟器安装证书，解决模拟器抓HTTPS【[教程](https://blog.csdn.net/hyq413950612/article/details/143772225)】
 
 ### 实现目的：
 
