--- a/docs/views/numerology/2025-01-17-CTFLearn.md
+++ b/docs/views/numerology/2025-01-17-CTFLearn.md
@@ -63,7 +63,7 @@ publish: true
 
    ![image-20250117211407781](/img/ctfLearn/image-20250117211407781.png)
 
-4. 此时就能在模拟器中查看网站，就能抓到了。（但有个问题是我的Fiddler好像是HTTPS转为了HTTP）
+4. 此时就能在模拟器中查看任意网站，就能抓到了。
 
 5. 这种抓模拟器里的包，是可以抓到APP的包的，比如之前几节课讲的打包的网站为APP的，或者是原生APP里用到网站访问的，都能抓。如果用一个工具抓不到，可以换其他工具试一试。
 
