--- a/docs/views/numerology/2025-01-18-CTFLearn.md
+++ b/docs/views/numerology/2025-01-18-CTFLearn.md
@@ -74,7 +74,11 @@ publish: true
 
 ![image-20250118223742069](/img/ctfLearn/image-20250118223742069.png)
 
-### 用其他抓包软件转发的优点：
+
+
+## 小程序抓包
+
+### 用其他抓包软件如Charles转发的优点：
 
 **案例1：**微信小程序抓包。
 
