--- a/docs/views/numerology/2025-01-19-CTFLearn.md
+++ b/docs/views/numerology/2025-01-19-CTFLearn.md
@@ -47,13 +47,113 @@ publish: true
 
 # 第25章：抓包技术-HTTPS协议&APP&小程序&PC应用&Web&转发联动
 
-## 模拟器抓包
+## 小程序抓包
 
-**案例2：**用Proxifler工具进行转发【[工具链接](https://www.proxifier.com/download/)】【[安装教程](https://www.jianshu.com/p/aec624882979)】
+**案例2：**用Proxifier工具进行转发【[工具链接](https://www.proxifier.com/download/)】【[安装教程](https://www.jianshu.com/p/aec624882979)】
 
-在Proxifler工具中设置一下代理，选择`Profile-Proxy Server-Add`，然后添加`127.0.0.1:8080`且为HTTPS
+在Proxifier工具中设置一下代理，选择`Profile-Proxy Server-Add`，然后添加`127.0.0.1:8080`且为HTTPS
 
 ![image-20250118233951134](/img/ctfLearn/image-20250118233951134.png)
 
-然后我们设置代理规则，
+然后我们设置代理规则，需要设置成如下图所示，注意标注位置：
 
+![image-20250119203136276](/img/ctfLearn/image-20250119203136276.png)
+
+> 这里发生了一个小插曲，我之前没给本机装BurpSuite的HTTPS证书，导致打开Proxifier以后列表中一直在刷新，一直有新的请求进来，BurpSuite也是如此，每当打开Proxifier就不停有请求过去，以上现象在重新安装BurpSuite的HTTPS证书后消失了。
+
+如果我们不开代理，也不开Proxifier，我们的BurpSuite是抓不了微信小程序的，这一步就不演示了。
+
+我们设置好了Proxifier代理工具，并且打开BurpSuite以后，就能将微信这个进程的指向特定的某些目标主机、目标端口都抓下来，功能特别强大。这里并没有设置目标主机、端口，所以是微信这个进程的所有请求都被转发到BurpSuite上了：
+
+![image-20250119204437363](/img/ctfLearn/image-20250119204437363.png)
+
+**在原理上：**其实和茶杯转发是类似的，但Proxifier这个工具更人性化，有更详细的设置，能放过很多不必要的数据包。
+
+**在原因上：**在微信这个应用中设置代理，可能会导致非常多的地方无法访问，连我们需要渗透目标的页面都进不去可能，所以我们才要用到代理。此外，如果应用没有代理这个功能，也就用到了我们刚才的这两个方法。
+
+
+
+## PC本机应用抓包
+
+### 用Charles和Fiddler抓本机PC应用
+
+Fiddler和Charles是肯定都可以抓到的，就不用再赘述了。我们打开百度网盘，会看到工具中有很多带baidu特征的数据包。
+
+![image-20250119205905582](/img/ctfLearn/image-20250119205905582.png)
+
+![image-20250119211259046](/img/ctfLearn/image-20250119211259046.png)
+
+> 切记切记，在用Charles和Fiddler抓包的时候，是千万千万不能开浏览器的代理插件比如SwitchyOmega等，会导致工具抓不到，我已经犯了好几次了，每次忘记这回事。
+
+
+
+### 用BurpSuite抓本机PC应用
+
+我们尝试在设置中打开代理，然后再去打开百度网盘和BurpSuite，发现是能抓到的：
+
+![image-20250119212207400](/img/ctfLearn/image-20250119212207400.png)
+
+![image-20250119212057639](/img/ctfLearn/image-20250119212057639.png)
+
+
+
+### 用Fiddler指定进程抓本机PC应用
+
+我们选择其他方式，试一试Fiddler的指定进程的抓取，按提示将十字准星拖到想要抓包的进程中：
+
+![image-20250119212620074](/img/ctfLearn/image-20250119212620074.png)
+
+![image-20250119212552573](/img/ctfLearn/image-20250119212552573.png)
+
+**问题：**视频中演示的是腾讯文档，用Fiddler的指定程序抓包没有抓到
+
+**原因：**因为像是360、腾讯文档之类的应用程序，默认赋给这些程序的权限非常高，我们没法对这些程序的数据包进行拦截。
+
+**结论：**我们有时候只能抓小型应用，那种没有特别高权限的应用，大型应用的权限太高，很难抓到。
+
+
+
+### 用Proxifier+BurpSuite抓本机PC应用
+
+我们还是进入到Proxifier的`Proxification Rules`设置页，将刚才的WeChat.exe这个进程换成我们想抓的百度网盘的进程名BaiduNetdisk（可以用应用的exe文件名，也可以用任务管理器查看）：
+
+![image-20250119215932492](/img/ctfLearn/image-20250119215932492.png)
+
+此时打开BurpSuite，确认Proxifier工具转发到了127.0.0.1:8080端口，且BurpSuite监听127.0.0.1:8080，在我们点击百度网盘的登录的时候，就能抓到这个数据包，但显示网络问题无法登录：
+
+![image-20250119220303661](/img/ctfLearn/image-20250119220303661.png)
+
+
+
+### 总结：
+
+其实我们今天讲的只能解决一部分问题，这几个工具都有优点和工具，且这些工具都是针对HTTPS和HTTP协议的，其他协议的用这三款工具抓不了，比如游戏的数据包、蓝牙的数据包等。有些软件打开代理以后，APP直接访问不了，网络连接中断，因为可能APP自己有防抓包的技术。
+
+
+
+### 核心：
+
+- 抓的协议是HTTP和HTTPS协议的数据包
+- 讲的是三款工具+一款转发工具的使用
+- 抓的对象是四个对象：浏览器Web、APP、小程序、PC应用。
+- 没有防护，没有反代理检测、证书校验等。
+
+
+
+### 提问：
+
+**抓包的目的：**
+
+- 我的理解是信息搜集的一步，让我们知道目标地址。
+- 抓包得到的数据包是有很多参数的，我们可以对参数进行修改或者增加，针对性的展开渗透，比如SQL注入、未授权、信息泄露等。
+- 对于做逆向和算法的人来说，抓到数据以后进行逆向和算法分析，写一些比如越权之类的东西。
+
+## 思维导图
+
+![image-20250119224509003](/img/ctfLearn/image-20250119224509003.png)
+
+
+
+### 下节预告：
+
+抓其他协议
