记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-19-CTFLearn.md
+++ b/docs/views/numerology/2025-01-19-CTFLearn.md
@@ -125,13 +125,13 @@ Fiddler和Charles是肯定都可以抓到的，就不用再赘述了。我们打
 
 
 
-### 总结：
+## 总结：
 
 其实我们今天讲的只能解决一部分问题，这几个工具都有优点和工具，且这些工具都是针对HTTPS和HTTP协议的，其他协议的用这三款工具抓不了，比如游戏的数据包、蓝牙的数据包等。有些软件打开代理以后，APP直接访问不了，网络连接中断，因为可能APP自己有防抓包的技术。
 
 
 
-### 核心：
+## 核心：
 
 - 抓的协议是HTTP和HTTPS协议的数据包
 - 讲的是三款工具+一款转发工具的使用
@@ -140,20 +140,28 @@ Fiddler和Charles是肯定都可以抓到的，就不用再赘述了。我们打
 
 
 
-### 提问：
+## 提问：
 
-**抓包的目的：**
+### **抓包的目的：**
 
 - 我的理解是信息搜集的一步，让我们知道目标地址。
 - 抓包得到的数据包是有很多参数的，我们可以对参数进行修改或者增加，针对性的展开渗透，比如SQL注入、未授权、信息泄露等。
 - 对于做逆向和算法的人来说，抓到数据以后进行逆向和算法分析，写一些比如越权之类的东西。
-
-## 思维导图
-
-![image-20250119224509003](/img/ctfLearn/image-20250119224509003.png)
 
 
 
 ### 下节预告：
 
 抓其他协议
+
+
+
+### 尝试抓取某答题小程序的所有题目
+
+通过BurpSuite+Proxifier工具，抓到了请求题目列表、请求题目详情、保存答案等接口和参数传递方式。如果投入一些时间，确实可能获取到所有题目及其答案，但投入产出不成正比，且可能存在封号以及法律风险，遂未深入尝试。
+
+
+
+## 思维导图
+
+![image-20250119224509003](/img/ctfLearn/image-20250119224509003.png)
