记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-20-CTFLearn.md
+++ b/docs/views/numerology/2025-01-20-CTFLearn.md
@@ -48,11 +48,11 @@ publish: true
 
 # 第26章：抓包技术-全局协议&封包监听&网卡模式&APP&小程序&PC应用
 
-## 抓APP抓其他数据包
+## 抓APP的其他数据包
 
 ### 案例演示-类传奇游戏APP-用BurpSuite抓包
 
-我们在逍遥模拟器中下载一个类似传奇的游戏。
+我们在逍遥模拟器中下载一个类似传奇的游戏APP。
 
 1. 尝试用 BurpSuite对其抓包，需要打开代理：
 
@@ -88,6 +88,8 @@ publish: true
 
 ### 案例演示-传奇类游戏APP-用WireShark抓包
 
+> Wireshark®流量分析 是一个免费且开源的网络封包分析软件，前称 Ethereal，在 2006 年 5 月因商标问题更名。它被广泛用于网络故障排除、分析、软件和通信协议开发以及教育等领域。其功能是撷取网络封包，并尽可能显示出最为详细的网络封包资料，使用 WinPCAP 作为接口，直接与网卡进行数据报文交换。
+
 WireShark的难点在于筛选我们有用的数据包。
 
 - 用WireShark在抓包的时候不知道这个流量是从哪里来的，而科来可以针对性的对其分析，知道流量是从哪里来的。
@@ -97,6 +99,8 @@ WireShark的难点在于筛选我们有用的数据包。
 
 ![image-20250120230224611](/img/ctfLearn/image-20250120230224611.png)
 
+
+
 ### 案例演示-微信小程序-用科来抓包
 
 图中可以看到，我们还是抓WLAN，即无线网络触发的包，根据进程名，我们应该是与WeChat微信相关，WeChatAppEx符合特征，而20956是我没有开小程序之前就在了，开了douyu小程序以后多了一条17496，判断应该是douyu小程序的数据。
@@ -104,14 +108,6 @@ WireShark的难点在于筛选我们有用的数据包。
 ![image-20250120225738707](/img/ctfLearn/image-20250120225738707.png)
 
 
-
-## 全局协议
-
-
-
-### 工具介绍-WireShark
-
-### 工具介绍-科来
 
 ### 题外话
 
