记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-20-CTFLearn.md
+++ b/docs/views/numerology/2025-01-20-CTFLearn.md
@@ -38,7 +38,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第61天
 
-今日内容：抓包技术-HTTPS协议&APP&小程序&PC应用&WEB&转发联动
+今日内容：抓包技术-全局协议&封包监听&网卡模式&APP&小程序&PC应用
 
 [[toc]]
 
